.metals/.reports/metals/2023-10-06/r_scala-toplevel-mtags_16-42-03-201
id: file://<WORKSPACE>/src/test/scala/day27/ImmExtensionTester.scala:[257..257) in Input.VirtualFile("file://<WORKSPACE>/src/test/scala/day27/ImmExtensionTester.scala", "package day27

import chisel3._
import chisel3 . util._
import org.scalatest._
import chiseltest._
import chisel3.experimental.BundleLiterals._
import chiseltest.experimental.TestOptionBuilder._
import chiseltest.internal.VerilatorBackendAnnotation

class 
")
file://<WORKSPACE>/src/test/scala/day27/ImmExtensionTester.scala:12: error: expected identifier; obtained eof

^